# react-router-routes

./: .copier-answers.yml  AGENTS.md  CHANGELOG.md  Justfile  README.md  commands.md  copier.yml  instructions.md  pyproject.toml
.claude/commands/: write-readme.md
.cursor/commands/: write-readme.md
.cursor/rules/: general.mdc  python.mdc
.gemini/commands/: write-readme.toml
.github/: copilot-instructions.md
.github/instructions/: alembic-migrations.instructions.md  fastapi.instructions.md  pytest-integration-tests.instructions.md  pytest-tests.instructions.md  python.instructions.md
.github/prompts/: fix-tests.prompt.md  write-readme.prompt.md
.github/workflows/: build_and_publish.yml  build_and_publish_release_please_test_matrix.yml
react_router_routes/: __init__.py  generate.py
tests/: react-router.json  test_generate_from_json.py  test_import.py  test_package_manager_detection.py  test_package_manager_integration.py  test_ruff_integration.py  test_url_params.py
