[project]
name = "react-router-routes"
version = "0.1.0"
description = ""
keywords = []
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"typer>=0.12.5",
	"jinja2>=3.1.4",
	"python-decouple>=3.8",
	"typing-extensions>=4.12.2",
]
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/react-router-routes" }

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.scripts]
react-router-routes = "react_router_routes:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[dependency-groups]
dev = ["pytest>=8.3.3"]
