[project]
name = "react-router-routes"
version = "0.4.0"
description = "Generate strongly-typed Python helpers (TypedDict param classes + path/url builders) from a React Router v6+ route tree so Python code can build frontend URLs safely."
keywords = [
    "react-router",
    "router",
    "routes",
    "url-generation",
    "typed-routes",
    "typed",
    "cli",
    "backend",
    "frontend",
    "integration",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer>=0.12.5", "jinja2>=3.1.4", "structlog-config>=0.8.0"]
uthors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/react-router-routes" }

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.scripts]
react-router-routes = "react_router_routes:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[dependency-groups]
dev = ["pytest>=8.3.3", "pyright[nodejs]>=1.1.380", "ruff>=0.8.0"]

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.ruff]
extend-exclude = ["playground.py", "playground/"]
